// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<InterventionPage /> Should render and match the snapshot with interventions 1`] = `
.c7 {
  font-family: DM Sans;
  font-size: 13px;
  line-height: 130%;
  font-weight: 700;
  color: #2F3850;
}

.c8 {
  font-family: DM Sans;
  font-size: 13px;
  line-height: 130%;
  font-weight: 700;
  color: rgba(183,39,234,1);
  color: rgba(183,39,234,1);
}

.c2 {
  width: auto;
  height: auto;
  display: block;
  border-radius: 5px;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  z-index: 1;
  padding: 8px;
  background-color: rgba(255,255,255,1);
  border-radius: 10px;
  box-shadow: 0px 0px 50px rgba(0,0,0,0.08);
  border-radius: 10px;
  color: unset;
}

.c15 {
  width: auto;
  height: auto;
  display: block;
  border-radius: 5px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  color: unset;
}

.c16 {
  width: auto;
  height: auto;
  display: block;
  border-radius: 5px;
  color: unset;
}

.c17 {
  width: auto;
  height: auto;
  display: block;
  border-radius: 5px;
  width: 2px;
  height: 100%;
  margin-right: 24px;
  margin-left: 24px;
  background-color: rgba(233,241,251,1);
  color: unset;
}

.c24 {
  width: auto;
  height: auto;
  display: block;
  border-radius: 5px;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  color: unset;
}

.c6 {
  width: auto;
  height: auto;
}

.c19 {
  width: auto;
  height: auto;
  margin-bottom: 2px;
  margin-right: 8px;
}

.c20 {
  width: auto;
  height: auto;
  -webkit-transition: -webkit-transform 0.2s;
  -webkit-transition: transform 0.2s;
  transition: transform 0.2s;
}

.c13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: auto;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-content: flex-start;
  -ms-flex-line-pack: start;
  align-content: flex-start;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-content: flex-end;
  -ms-flex-line-pack: end;
  align-content: flex-end;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.c0 {
  height: 100% !important;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  overflow: clip;
  padding-top: 54px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 {
  max-width: 960px !important;
}

.c14 {
  margin: 0;
  font-family: DM Sans;
  font-size: 25px;
  line-height: 130%;
  color: #2F3850;
}

.c18 {
  outline: none;
  border: none;
  background: transparent;
  font-weight: bold;
  font-size: 13px;
  line-height: 17px;
  padding: 2px;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-weight: 700;
  color: #2F3850;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c11 {
  height: 28px;
  width: 28px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 4px;
  background: #E9F1FB;
  margin-right: 35px;
  cursor: pointer;
  border: none;
  outline: none;
  padding: 0;
  margin: 0px;
}

.c22 {
  padding: 12px;
  border-style: solid;
  border-width: 1px;
  border-color: #E9F1FB;
  border-radius: 5px;
  padding-right: 30px;
  padding-left: 30px;
  color: #2F3850;
}

.c22:focus {
  box-shadow: none;
  outline: none;
  border-color: #107969;
}

.c22:disabled {
  color: #ABBBD1;
}

.c21 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.c23 {
  position: absolute;
  left: 10px;
  top: 10px;
}

.c5 {
  border-radius: 50%;
  background-color: #E9F1FB;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 50px;
  height: 50px;
  background-color: rgba(233,241,251,1);
  opacity: 1;
  color: #2F3850;
}

.c12 {
  padding: 0 !important;
  margin-top: 10px;
  width: 100%;
}

.c9 {
  color: #B727EA;
}

.c3 {
  position: absolute;
  right: 16px;
  top: 16px;
}

<div>
  <div
    class="c0 c1"
    direction="column"
    display="flex"
    height="100% !important"
    overflow="clip"
    pt="54"
    style="box-sizing: border-box; position: relative; margin-left: auto; margin-right: auto; padding-left: 15px; padding-right: 15px; max-width: 960px;"
  >
    <div
      class="c2 c3"
      width="max-content"
    >
      <div
        style="display: flex; flex-wrap: wrap; flex-grow: 0; flex-shrink: 0; align-items: normal; justify-content: flex-start; margin: 0px;"
      >
        <div
          align="start"
          class="c4"
          style="box-sizing: border-box; min-height: 1px; position: relative; width: 100%; flex-basis: 0px; flex-grow: 1; flex-shrink: 0; max-width: 100%; margin-left: 0%; padding: 8px;"
        >
          <div
            style="margin-left: -15px; margin-right: -15px; display: flex; flex-wrap: wrap; flex-grow: 0; flex-shrink: 0; align-items: center; justify-content: flex-start;"
          >
            <div
              align="start"
              class="c4"
              style="box-sizing: border-box; min-height: 1px; position: relative; padding-left: 15px; padding-right: 15px; width: 25%; flex-basis: 25%; flex-grow: 0; flex-shrink: 0; max-width: 25%; margin-left: 0%;"
            >
              <div
                class="c5"
                opacity="1"
              >
                <img
                  class="c6"
                  role="presentation"
                  src="IMAGE_MOCK"
                />
              </div>
            </div>
            <div
              align="start"
              class="c4"
              style="box-sizing: border-box; min-height: 1px; position: relative; padding-left: 15px; padding-right: 15px; width: 75%; flex-basis: 75%; flex-grow: 0; flex-shrink: 0; max-width: 75%; margin-left: 0%;"
            >
              <p
                class="c7"
                font-weight="bold"
              >
                Something went wrong? Have a new idea?
              </p>
              <p
                class="c8"
                color="#B727EA"
                font-weight="bold"
              >
                <a
                  class="c9"
                  href="https://msu.co1.qualtrics.com/jfe/form/SV_6S9MV7pPpoqFwTY"
                  target="_blank"
                >
                  Share your thoughts here!
                </a>
              </p>
            </div>
          </div>
        </div>
        <div
          align="end"
          class="c10"
          style="box-sizing: border-box; min-height: 1px; position: relative; width: auto; flex-basis: auto; flex-grow: 0; flex-shrink: 0; max-width: 100%; margin-left: 0%; padding: 0px;"
        >
          <button
            aria-label="Close"
            class="c11"
            title="Close"
          >
            <img
              alt="cross"
              src="IMAGE_MOCK"
            />
          </button>
        </div>
      </div>
    </div>
    <div
      class="c12"
      style="box-sizing: border-box; position: relative; margin-left: auto; margin-right: auto; padding-left: 15px; padding-right: 15px; display: flex;"
    >
      <div
        class="c13"
      >
        <h1
          class="c14"
        >
          My Dashboard
        </h1>
        <div
          class="c15"
          display="flex"
        >
          <div
            class="c16"
            data-for="dashboard-cdh"
            data-tip=""
          >
            <img
              alt="?"
              class="c6"
              src="IMAGE_MOCK"
            />
          </div>
        </div>
      </div>
      <div
        class="c17"
        height="100%"
        width="2"
      />
      <button
        class="c18"
        display="flex"
        font-weight="bold"
      >
        <img
          alt="Import Intervention"
          class="c19"
          src="IMAGE_MOCK"
        />
        <p
          class="c8"
          color="#B727EA"
          font-weight="bold"
        >
          Import Intervention
        </p>
      </button>
      <span
        style="display: table; clear: both;"
      />
    </div>
    <div
      class="c12"
      style="box-sizing: border-box; position: relative; margin-left: auto; margin-right: auto; padding-left: 15px; padding-right: 15px;"
    >
      <div
        style="margin-left: -15px; margin-right: -15px; display: flex; flex-wrap: wrap; flex-grow: 0; flex-shrink: 0; align-items: normal; justify-content: flex-start;"
      >
        <div
          style="box-sizing: border-box; min-height: 1px; position: relative; padding-left: 15px; padding-right: 15px; width: 50%; flex-basis: 50%; flex-grow: 0; flex-shrink: 0; max-width: 50%; margin-left: 0%; margin-top: 10px; margin-bottom: 10px;"
        >
          <div
            my="35"
            style="margin-left: -15px; margin-right: -15px; display: flex; flex-wrap: wrap; flex-grow: 0; flex-shrink: 0; align-items: center; justify-content: flex-start;"
          >
            <div
              style="box-sizing: border-box; min-height: 1px; position: relative; padding-left: 15px; padding-right: 15px; width: 100%; flex-basis: 0px; flex-grow: 1; flex-shrink: 0; max-width: 100%; margin-left: 0%;"
            >
              <div
                class="c16"
              >
                <div
                  class=" css-2b097c-container"
                >
                  <span
                    aria-atomic="false"
                    aria-live="polite"
                    aria-relevant="additions text"
                    class="css-1f43avz-a11yText-A11yText"
                  />
                  <div
                    class=" css-4iyz22-control"
                  >
                    <div
                      class=" css-g1d714-ValueContainer"
                    >
                      <div
                        class=" css-q5ew0g-placeholder"
                      >
                        All interventions
                      </div>
                      <div
                        class="css-b8ldur-Input"
                      >
                        <div
                          class=""
                          style="display: inline-block;"
                        >
                          <input
                            aria-autocomplete="list"
                            autocapitalize="none"
                            autocomplete="off"
                            autocorrect="off"
                            id="react-select-8-input"
                            spellcheck="false"
                            style="box-sizing: content-box; width: 2px; border: 0px; opacity: 1; outline: 0; padding: 0px;"
                            tabindex="0"
                            type="text"
                            value=""
                          />
                          <div
                            style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
                          />
                        </div>
                      </div>
                    </div>
                    <div
                      class=" css-1hb7zxy-IndicatorsContainer"
                    >
                      <div
                        aria-hidden="true"
                        class=" css-tlfecz-indicatorContainer"
                      >
                        <img
                          alt="arrow"
                          class="c20"
                          src="IMAGE_MOCK"
                          transform=""
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          style="box-sizing: border-box; min-height: 1px; position: relative; padding-left: 15px; padding-right: 15px; width: 50%; flex-basis: 50%; flex-grow: 0; flex-shrink: 0; max-width: 50%; margin-left: 0%; margin-top: 10px; margin-bottom: 10px;"
        >
          <div
            my="35"
            style="margin-left: -15px; margin-right: -15px; display: flex; flex-wrap: wrap; flex-grow: 0; flex-shrink: 0; align-items: center; justify-content: flex-start;"
          >
            <div
              style="box-sizing: border-box; min-height: 1px; position: relative; padding-left: 15px; padding-right: 15px; width: 100%; flex-basis: 0px; flex-grow: 1; flex-shrink: 0; max-width: 100%; margin-left: 0%;"
            >
              <div
                class="c16"
              >
                <div
                  class=" css-2b097c-container"
                >
                  <span
                    aria-atomic="false"
                    aria-live="polite"
                    aria-relevant="additions text"
                    class="css-1f43avz-a11yText-A11yText"
                  />
                  <div
                    class=" css-pqwieh-control"
                  >
                    <div
                      class=" css-g1d714-ValueContainer"
                    >
                      <div
                        class="css-1rhbuit-multiValue"
                      >
                        <div
                          class="css-12jo7m5"
                        >
                          Closed
                        </div>
                        <div
                          class="css-xb97g8"
                        >
                          <svg
                            aria-hidden="true"
                            class="css-tj5bde-Svg"
                            focusable="false"
                            height="14"
                            viewBox="0 0 20 20"
                            width="14"
                          >
                            <path
                              d="M14.348 14.849c-0.469 0.469-1.229 0.469-1.697 0l-2.651-3.030-2.651 3.029c-0.469 0.469-1.229 0.469-1.697 0-0.469-0.469-0.469-1.229 0-1.697l2.758-3.15-2.759-3.152c-0.469-0.469-0.469-1.228 0-1.697s1.228-0.469 1.697 0l2.652 3.031 2.651-3.031c0.469-0.469 1.228-0.469 1.697 0s0.469 1.229 0 1.697l-2.758 3.152 2.758 3.15c0.469 0.469 0.469 1.229 0 1.698z"
                            />
                          </svg>
                        </div>
                      </div>
                      <div
                        class="css-1rhbuit-multiValue"
                      >
                        <div
                          class="css-12jo7m5"
                        >
                          Draft
                        </div>
                        <div
                          class="css-xb97g8"
                        >
                          <svg
                            aria-hidden="true"
                            class="css-tj5bde-Svg"
                            focusable="false"
                            height="14"
                            viewBox="0 0 20 20"
                            width="14"
                          >
                            <path
                              d="M14.348 14.849c-0.469 0.469-1.229 0.469-1.697 0l-2.651-3.030-2.651 3.029c-0.469 0.469-1.229 0.469-1.697 0-0.469-0.469-0.469-1.229 0-1.697l2.758-3.15-2.759-3.152c-0.469-0.469-0.469-1.228 0-1.697s1.228-0.469 1.697 0l2.652 3.031 2.651-3.031c0.469-0.469 1.228-0.469 1.697 0s0.469 1.229 0 1.697l-2.758 3.152 2.758 3.15c0.469 0.469 0.469 1.229 0 1.698z"
                            />
                          </svg>
                        </div>
                      </div>
                      <div
                        class="css-1rhbuit-multiValue"
                      >
                        <div
                          class="css-12jo7m5"
                        >
                          Published
                        </div>
                        <div
                          class="css-xb97g8"
                        >
                          <svg
                            aria-hidden="true"
                            class="css-tj5bde-Svg"
                            focusable="false"
                            height="14"
                            viewBox="0 0 20 20"
                            width="14"
                          >
                            <path
                              d="M14.348 14.849c-0.469 0.469-1.229 0.469-1.697 0l-2.651-3.030-2.651 3.029c-0.469 0.469-1.229 0.469-1.697 0-0.469-0.469-0.469-1.229 0-1.697l2.758-3.15-2.759-3.152c-0.469-0.469-0.469-1.228 0-1.697s1.228-0.469 1.697 0l2.652 3.031 2.651-3.031c0.469-0.469 1.228-0.469 1.697 0s0.469 1.229 0 1.697l-2.758 3.152 2.758 3.15c0.469 0.469 0.469 1.229 0 1.698z"
                            />
                          </svg>
                        </div>
                      </div>
                      <div
                        class="css-b8ldur-Input"
                      >
                        <div
                          class=""
                          style="display: inline-block;"
                        >
                          <input
                            aria-autocomplete="list"
                            autocapitalize="none"
                            autocomplete="off"
                            autocorrect="off"
                            id="react-select-9-input"
                            spellcheck="false"
                            style="box-sizing: content-box; width: 2px; border: 0px; opacity: 1; outline: 0; padding: 0px;"
                            tabindex="0"
                            type="text"
                            value=""
                          />
                          <div
                            style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
                          />
                        </div>
                      </div>
                    </div>
                    <div
                      class=" css-1hb7zxy-IndicatorsContainer"
                    >
                      <div
                        aria-hidden="true"
                        class=" css-tlfecz-indicatorContainer"
                      >
                        <svg
                          aria-hidden="true"
                          class="css-tj5bde-Svg"
                          focusable="false"
                          height="20"
                          viewBox="0 0 20 20"
                          width="20"
                        >
                          <path
                            d="M14.348 14.849c-0.469 0.469-1.229 0.469-1.697 0l-2.651-3.030-2.651 3.029c-0.469 0.469-1.229 0.469-1.697 0-0.469-0.469-0.469-1.229 0-1.697l2.758-3.15-2.759-3.152c-0.469-0.469-0.469-1.228 0-1.697s1.228-0.469 1.697 0l2.652 3.031 2.651-3.031c0.469-0.469 1.228-0.469 1.697 0s0.469 1.229 0 1.697l-2.758 3.152 2.758 3.15c0.469 0.469 0.469 1.229 0 1.698z"
                          />
                        </svg>
                      </div>
                      <div
                        aria-hidden="true"
                        class=" css-tlfecz-indicatorContainer"
                      >
                        <img
                          alt="arrow"
                          class="c20"
                          src="IMAGE_MOCK"
                          transform=""
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          style="box-sizing: border-box; min-height: 1px; position: relative; padding-left: 15px; padding-right: 15px; width: 50%; flex-basis: 50%; flex-grow: 0; flex-shrink: 0; max-width: 50%; margin-left: 0%; margin-top: 10px; margin-bottom: 10px;"
        >
          <div
            style="margin-left: -15px; margin-right: -15px; display: flex; flex-wrap: wrap; flex-grow: 0; flex-shrink: 0; align-items: center; justify-content: flex-start;"
          >
            <div
              style="box-sizing: border-box; min-height: 1px; position: relative; padding-left: 15px; padding-right: 15px; width: 100%; flex-basis: 0px; flex-grow: 1; flex-shrink: 0; max-width: 100%; margin-left: 0%;"
            >
              <div
                class="c21"
              >
                <input
                  aria-label="Filter Interventions by name"
                  class="c22"
                  placeholder="Filter by name"
                  type="text"
                />
                <img
                  alt="search"
                  class="c23"
                  src="IMAGE_MOCK"
                />
                
              </div>
            </div>
          </div>
        </div>
      </div>
      <span
        style="display: table; clear: both;"
      />
    </div>
    <div
      class="c24"
    >
      <div
        class="virtual-grid-auto-sizer"
        style="overflow: visible; height: 0px; width: 0px;"
      />
      <div
        class="resize-triggers"
      >
        <div
          class="expand-trigger"
        >
          <div
            style="width: 1px; height: 1px;"
          />
        </div>
        <div
          class="contract-trigger"
        />
      </div>
    </div>
    <span
      style="display: table; clear: both;"
    />
  </div>
</div>
`;

exports[`<InterventionPage /> Should render and match the snapshot with loader 1`] = `
.c7 {
  font-family: DM Sans;
  font-size: 13px;
  line-height: 130%;
  font-weight: 700;
  color: #2F3850;
}

.c8 {
  font-family: DM Sans;
  font-size: 13px;
  line-height: 130%;
  font-weight: 700;
  color: rgba(183,39,234,1);
  color: rgba(183,39,234,1);
}

.c2 {
  width: auto;
  height: auto;
  display: block;
  border-radius: 5px;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  z-index: 1;
  padding: 8px;
  background-color: rgba(255,255,255,1);
  border-radius: 10px;
  box-shadow: 0px 0px 50px rgba(0,0,0,0.08);
  border-radius: 10px;
  color: unset;
}

.c15 {
  width: auto;
  height: auto;
  display: block;
  border-radius: 5px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  color: unset;
}

.c16 {
  width: auto;
  height: auto;
  display: block;
  border-radius: 5px;
  color: unset;
}

.c17 {
  width: auto;
  height: auto;
  display: block;
  border-radius: 5px;
  width: 2px;
  height: 100%;
  margin-right: 24px;
  margin-left: 24px;
  background-color: rgba(233,241,251,1);
  color: unset;
}

.c24 {
  width: auto;
  height: auto;
  display: block;
  border-radius: 5px;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  color: unset;
}

.c6 {
  width: auto;
  height: auto;
}

.c19 {
  width: auto;
  height: auto;
  margin-bottom: 2px;
  margin-right: 8px;
}

.c20 {
  width: auto;
  height: auto;
  -webkit-transition: -webkit-transform 0.2s;
  -webkit-transition: transform 0.2s;
  transition: transform 0.2s;
}

.c13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: auto;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-content: flex-start;
  -ms-flex-line-pack: start;
  align-content: flex-start;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-content: flex-end;
  -ms-flex-line-pack: end;
  align-content: flex-end;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.c0 {
  height: 100% !important;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  overflow: clip;
  padding-top: 54px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 {
  max-width: 960px !important;
}

.c14 {
  margin: 0;
  font-family: DM Sans;
  font-size: 25px;
  line-height: 130%;
  color: #2F3850;
}

.c18 {
  outline: none;
  border: none;
  background: transparent;
  font-weight: bold;
  font-size: 13px;
  line-height: 17px;
  padding: 2px;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-weight: 700;
  color: #2F3850;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c11 {
  height: 28px;
  width: 28px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 4px;
  background: #E9F1FB;
  margin-right: 35px;
  cursor: pointer;
  border: none;
  outline: none;
  padding: 0;
  margin: 0px;
}

.c22 {
  padding: 12px;
  border-style: solid;
  border-width: 1px;
  border-color: #E9F1FB;
  border-radius: 5px;
  padding-right: 30px;
  padding-left: 30px;
  color: #2F3850;
}

.c22:focus {
  box-shadow: none;
  outline: none;
  border-color: #107969;
}

.c22:disabled {
  color: #ABBBD1;
}

.c21 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.c23 {
  position: absolute;
  left: 10px;
  top: 10px;
}

.c5 {
  border-radius: 50%;
  background-color: #E9F1FB;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 50px;
  height: 50px;
  background-color: rgba(233,241,251,1);
  opacity: 1;
  color: #2F3850;
}

.c12 {
  padding: 0 !important;
  margin-top: 10px;
  width: 100%;
}

.c9 {
  color: #B727EA;
}

.c3 {
  position: absolute;
  right: 16px;
  top: 16px;
}

<div>
  <div
    class="c0 c1"
    direction="column"
    display="flex"
    height="100% !important"
    overflow="clip"
    pt="54"
    style="box-sizing: border-box; position: relative; margin-left: auto; margin-right: auto; padding-left: 15px; padding-right: 15px; max-width: 960px;"
  >
    <div
      class="c2 c3"
      width="max-content"
    >
      <div
        style="display: flex; flex-wrap: wrap; flex-grow: 0; flex-shrink: 0; align-items: normal; justify-content: flex-start; margin: 0px;"
      >
        <div
          align="start"
          class="c4"
          style="box-sizing: border-box; min-height: 1px; position: relative; width: 100%; flex-basis: 0px; flex-grow: 1; flex-shrink: 0; max-width: 100%; margin-left: 0%; padding: 8px;"
        >
          <div
            style="margin-left: -15px; margin-right: -15px; display: flex; flex-wrap: wrap; flex-grow: 0; flex-shrink: 0; align-items: center; justify-content: flex-start;"
          >
            <div
              align="start"
              class="c4"
              style="box-sizing: border-box; min-height: 1px; position: relative; padding-left: 15px; padding-right: 15px; width: 25%; flex-basis: 25%; flex-grow: 0; flex-shrink: 0; max-width: 25%; margin-left: 0%;"
            >
              <div
                class="c5"
                opacity="1"
              >
                <img
                  class="c6"
                  role="presentation"
                  src="IMAGE_MOCK"
                />
              </div>
            </div>
            <div
              align="start"
              class="c4"
              style="box-sizing: border-box; min-height: 1px; position: relative; padding-left: 15px; padding-right: 15px; width: 75%; flex-basis: 75%; flex-grow: 0; flex-shrink: 0; max-width: 75%; margin-left: 0%;"
            >
              <p
                class="c7"
                font-weight="bold"
              >
                Something went wrong? Have a new idea?
              </p>
              <p
                class="c8"
                color="#B727EA"
                font-weight="bold"
              >
                <a
                  class="c9"
                  href="https://msu.co1.qualtrics.com/jfe/form/SV_6S9MV7pPpoqFwTY"
                  target="_blank"
                >
                  Share your thoughts here!
                </a>
              </p>
            </div>
          </div>
        </div>
        <div
          align="end"
          class="c10"
          style="box-sizing: border-box; min-height: 1px; position: relative; width: auto; flex-basis: auto; flex-grow: 0; flex-shrink: 0; max-width: 100%; margin-left: 0%; padding: 0px;"
        >
          <button
            aria-label="Close"
            class="c11"
            title="Close"
          >
            <img
              alt="cross"
              src="IMAGE_MOCK"
            />
          </button>
        </div>
      </div>
    </div>
    <div
      class="c12"
      style="box-sizing: border-box; position: relative; margin-left: auto; margin-right: auto; padding-left: 15px; padding-right: 15px; display: flex;"
    >
      <div
        class="c13"
      >
        <h1
          class="c14"
        >
          My Dashboard
        </h1>
        <div
          class="c15"
          display="flex"
        >
          <div
            class="c16"
            data-for="dashboard-cdh"
            data-tip=""
          >
            <img
              alt="?"
              class="c6"
              src="IMAGE_MOCK"
            />
          </div>
        </div>
      </div>
      <div
        class="c17"
        height="100%"
        width="2"
      />
      <button
        class="c18"
        display="flex"
        font-weight="bold"
      >
        <img
          alt="Import Intervention"
          class="c19"
          src="IMAGE_MOCK"
        />
        <p
          class="c8"
          color="#B727EA"
          font-weight="bold"
        >
          Import Intervention
        </p>
      </button>
      <span
        style="display: table; clear: both;"
      />
    </div>
    <div
      class="c12"
      style="box-sizing: border-box; position: relative; margin-left: auto; margin-right: auto; padding-left: 15px; padding-right: 15px;"
    >
      <div
        style="margin-left: -15px; margin-right: -15px; display: flex; flex-wrap: wrap; flex-grow: 0; flex-shrink: 0; align-items: normal; justify-content: flex-start;"
      >
        <div
          style="box-sizing: border-box; min-height: 1px; position: relative; padding-left: 15px; padding-right: 15px; width: 50%; flex-basis: 50%; flex-grow: 0; flex-shrink: 0; max-width: 50%; margin-left: 0%; margin-top: 10px; margin-bottom: 10px;"
        >
          <div
            my="35"
            style="margin-left: -15px; margin-right: -15px; display: flex; flex-wrap: wrap; flex-grow: 0; flex-shrink: 0; align-items: center; justify-content: flex-start;"
          >
            <div
              style="box-sizing: border-box; min-height: 1px; position: relative; padding-left: 15px; padding-right: 15px; width: 100%; flex-basis: 0px; flex-grow: 1; flex-shrink: 0; max-width: 100%; margin-left: 0%;"
            >
              <div
                class="c16"
              >
                <div
                  class=" css-2b097c-container"
                >
                  <span
                    aria-atomic="false"
                    aria-live="polite"
                    aria-relevant="additions text"
                    class="css-1f43avz-a11yText-A11yText"
                  />
                  <div
                    class=" css-4iyz22-control"
                  >
                    <div
                      class=" css-g1d714-ValueContainer"
                    >
                      <div
                        class=" css-q5ew0g-placeholder"
                      >
                        All interventions
                      </div>
                      <div
                        class="css-b8ldur-Input"
                      >
                        <div
                          class=""
                          style="display: inline-block;"
                        >
                          <input
                            aria-autocomplete="list"
                            autocapitalize="none"
                            autocomplete="off"
                            autocorrect="off"
                            id="react-select-4-input"
                            spellcheck="false"
                            style="box-sizing: content-box; width: 2px; border: 0px; opacity: 1; outline: 0; padding: 0px;"
                            tabindex="0"
                            type="text"
                            value=""
                          />
                          <div
                            style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
                          />
                        </div>
                      </div>
                    </div>
                    <div
                      class=" css-1hb7zxy-IndicatorsContainer"
                    >
                      <div
                        aria-hidden="true"
                        class=" css-tlfecz-indicatorContainer"
                      >
                        <img
                          alt="arrow"
                          class="c20"
                          src="IMAGE_MOCK"
                          transform=""
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          style="box-sizing: border-box; min-height: 1px; position: relative; padding-left: 15px; padding-right: 15px; width: 50%; flex-basis: 50%; flex-grow: 0; flex-shrink: 0; max-width: 50%; margin-left: 0%; margin-top: 10px; margin-bottom: 10px;"
        >
          <div
            my="35"
            style="margin-left: -15px; margin-right: -15px; display: flex; flex-wrap: wrap; flex-grow: 0; flex-shrink: 0; align-items: center; justify-content: flex-start;"
          >
            <div
              style="box-sizing: border-box; min-height: 1px; position: relative; padding-left: 15px; padding-right: 15px; width: 100%; flex-basis: 0px; flex-grow: 1; flex-shrink: 0; max-width: 100%; margin-left: 0%;"
            >
              <div
                class="c16"
              >
                <div
                  class=" css-2b097c-container"
                >
                  <span
                    aria-atomic="false"
                    aria-live="polite"
                    aria-relevant="additions text"
                    class="css-1f43avz-a11yText-A11yText"
                  />
                  <div
                    class=" css-pqwieh-control"
                  >
                    <div
                      class=" css-g1d714-ValueContainer"
                    >
                      <div
                        class="css-1rhbuit-multiValue"
                      >
                        <div
                          class="css-12jo7m5"
                        >
                          Closed
                        </div>
                        <div
                          class="css-xb97g8"
                        >
                          <svg
                            aria-hidden="true"
                            class="css-tj5bde-Svg"
                            focusable="false"
                            height="14"
                            viewBox="0 0 20 20"
                            width="14"
                          >
                            <path
                              d="M14.348 14.849c-0.469 0.469-1.229 0.469-1.697 0l-2.651-3.030-2.651 3.029c-0.469 0.469-1.229 0.469-1.697 0-0.469-0.469-0.469-1.229 0-1.697l2.758-3.15-2.759-3.152c-0.469-0.469-0.469-1.228 0-1.697s1.228-0.469 1.697 0l2.652 3.031 2.651-3.031c0.469-0.469 1.228-0.469 1.697 0s0.469 1.229 0 1.697l-2.758 3.152 2.758 3.15c0.469 0.469 0.469 1.229 0 1.698z"
                            />
                          </svg>
                        </div>
                      </div>
                      <div
                        class="css-1rhbuit-multiValue"
                      >
                        <div
                          class="css-12jo7m5"
                        >
                          Draft
                        </div>
                        <div
                          class="css-xb97g8"
                        >
                          <svg
                            aria-hidden="true"
                            class="css-tj5bde-Svg"
                            focusable="false"
                            height="14"
                            viewBox="0 0 20 20"
                            width="14"
                          >
                            <path
                              d="M14.348 14.849c-0.469 0.469-1.229 0.469-1.697 0l-2.651-3.030-2.651 3.029c-0.469 0.469-1.229 0.469-1.697 0-0.469-0.469-0.469-1.229 0-1.697l2.758-3.15-2.759-3.152c-0.469-0.469-0.469-1.228 0-1.697s1.228-0.469 1.697 0l2.652 3.031 2.651-3.031c0.469-0.469 1.228-0.469 1.697 0s0.469 1.229 0 1.697l-2.758 3.152 2.758 3.15c0.469 0.469 0.469 1.229 0 1.698z"
                            />
                          </svg>
                        </div>
                      </div>
                      <div
                        class="css-1rhbuit-multiValue"
                      >
                        <div
                          class="css-12jo7m5"
                        >
                          Published
                        </div>
                        <div
                          class="css-xb97g8"
                        >
                          <svg
                            aria-hidden="true"
                            class="css-tj5bde-Svg"
                            focusable="false"
                            height="14"
                            viewBox="0 0 20 20"
                            width="14"
                          >
                            <path
                              d="M14.348 14.849c-0.469 0.469-1.229 0.469-1.697 0l-2.651-3.030-2.651 3.029c-0.469 0.469-1.229 0.469-1.697 0-0.469-0.469-0.469-1.229 0-1.697l2.758-3.15-2.759-3.152c-0.469-0.469-0.469-1.228 0-1.697s1.228-0.469 1.697 0l2.652 3.031 2.651-3.031c0.469-0.469 1.228-0.469 1.697 0s0.469 1.229 0 1.697l-2.758 3.152 2.758 3.15c0.469 0.469 0.469 1.229 0 1.698z"
                            />
                          </svg>
                        </div>
                      </div>
                      <div
                        class="css-b8ldur-Input"
                      >
                        <div
                          class=""
                          style="display: inline-block;"
                        >
                          <input
                            aria-autocomplete="list"
                            autocapitalize="none"
                            autocomplete="off"
                            autocorrect="off"
                            id="react-select-5-input"
                            spellcheck="false"
                            style="box-sizing: content-box; width: 2px; border: 0px; opacity: 1; outline: 0; padding: 0px;"
                            tabindex="0"
                            type="text"
                            value=""
                          />
                          <div
                            style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
                          />
                        </div>
                      </div>
                    </div>
                    <div
                      class=" css-1hb7zxy-IndicatorsContainer"
                    >
                      <div
                        aria-hidden="true"
                        class=" css-tlfecz-indicatorContainer"
                      >
                        <svg
                          aria-hidden="true"
                          class="css-tj5bde-Svg"
                          focusable="false"
                          height="20"
                          viewBox="0 0 20 20"
                          width="20"
                        >
                          <path
                            d="M14.348 14.849c-0.469 0.469-1.229 0.469-1.697 0l-2.651-3.030-2.651 3.029c-0.469 0.469-1.229 0.469-1.697 0-0.469-0.469-0.469-1.229 0-1.697l2.758-3.15-2.759-3.152c-0.469-0.469-0.469-1.228 0-1.697s1.228-0.469 1.697 0l2.652 3.031 2.651-3.031c0.469-0.469 1.228-0.469 1.697 0s0.469 1.229 0 1.697l-2.758 3.152 2.758 3.15c0.469 0.469 0.469 1.229 0 1.698z"
                          />
                        </svg>
                      </div>
                      <div
                        aria-hidden="true"
                        class=" css-tlfecz-indicatorContainer"
                      >
                        <img
                          alt="arrow"
                          class="c20"
                          src="IMAGE_MOCK"
                          transform=""
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          style="box-sizing: border-box; min-height: 1px; position: relative; padding-left: 15px; padding-right: 15px; width: 50%; flex-basis: 50%; flex-grow: 0; flex-shrink: 0; max-width: 50%; margin-left: 0%; margin-top: 10px; margin-bottom: 10px;"
        >
          <div
            style="margin-left: -15px; margin-right: -15px; display: flex; flex-wrap: wrap; flex-grow: 0; flex-shrink: 0; align-items: center; justify-content: flex-start;"
          >
            <div
              style="box-sizing: border-box; min-height: 1px; position: relative; padding-left: 15px; padding-right: 15px; width: 100%; flex-basis: 0px; flex-grow: 1; flex-shrink: 0; max-width: 100%; margin-left: 0%;"
            >
              <div
                class="c21"
              >
                <input
                  aria-label="Filter Interventions by name"
                  class="c22"
                  placeholder="Filter by name"
                  type="text"
                />
                <img
                  alt="search"
                  class="c23"
                  src="IMAGE_MOCK"
                />
                
              </div>
            </div>
          </div>
        </div>
      </div>
      <span
        style="display: table; clear: both;"
      />
    </div>
    <div
      class="c24"
    >
      <div
        class="virtual-grid-auto-sizer"
        style="overflow: visible; height: 0px; width: 0px;"
      />
      <div
        class="resize-triggers"
      >
        <div
          class="expand-trigger"
        >
          <div
            style="width: 1px; height: 1px;"
          />
        </div>
        <div
          class="contract-trigger"
        />
      </div>
    </div>
    <span
      style="display: table; clear: both;"
    />
  </div>
</div>
`;

exports[`<InterventionPage /> Should render and match the snapshot without interventions 1`] = `
.c7 {
  font-family: DM Sans;
  font-size: 13px;
  line-height: 130%;
  font-weight: 700;
  color: #2F3850;
}

.c8 {
  font-family: DM Sans;
  font-size: 13px;
  line-height: 130%;
  font-weight: 700;
  color: rgba(183,39,234,1);
  color: rgba(183,39,234,1);
}

.c2 {
  width: auto;
  height: auto;
  display: block;
  border-radius: 5px;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  z-index: 1;
  padding: 8px;
  background-color: rgba(255,255,255,1);
  border-radius: 10px;
  box-shadow: 0px 0px 50px rgba(0,0,0,0.08);
  border-radius: 10px;
  color: unset;
}

.c15 {
  width: auto;
  height: auto;
  display: block;
  border-radius: 5px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  color: unset;
}

.c16 {
  width: auto;
  height: auto;
  display: block;
  border-radius: 5px;
  color: unset;
}

.c17 {
  width: auto;
  height: auto;
  display: block;
  border-radius: 5px;
  width: 2px;
  height: 100%;
  margin-right: 24px;
  margin-left: 24px;
  background-color: rgba(233,241,251,1);
  color: unset;
}

.c24 {
  width: auto;
  height: auto;
  display: block;
  border-radius: 5px;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  color: unset;
}

.c6 {
  width: auto;
  height: auto;
}

.c19 {
  width: auto;
  height: auto;
  margin-bottom: 2px;
  margin-right: 8px;
}

.c20 {
  width: auto;
  height: auto;
  -webkit-transition: -webkit-transform 0.2s;
  -webkit-transition: transform 0.2s;
  transition: transform 0.2s;
}

.c13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: auto;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-content: flex-start;
  -ms-flex-line-pack: start;
  align-content: flex-start;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-content: flex-end;
  -ms-flex-line-pack: end;
  align-content: flex-end;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.c0 {
  height: 100% !important;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  overflow: clip;
  padding-top: 54px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 {
  max-width: 960px !important;
}

.c14 {
  margin: 0;
  font-family: DM Sans;
  font-size: 25px;
  line-height: 130%;
  color: #2F3850;
}

.c18 {
  outline: none;
  border: none;
  background: transparent;
  font-weight: bold;
  font-size: 13px;
  line-height: 17px;
  padding: 2px;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-weight: 700;
  color: #2F3850;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c11 {
  height: 28px;
  width: 28px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 4px;
  background: #E9F1FB;
  margin-right: 35px;
  cursor: pointer;
  border: none;
  outline: none;
  padding: 0;
  margin: 0px;
}

.c22 {
  padding: 12px;
  border-style: solid;
  border-width: 1px;
  border-color: #E9F1FB;
  border-radius: 5px;
  padding-right: 30px;
  padding-left: 30px;
  color: #2F3850;
}

.c22:focus {
  box-shadow: none;
  outline: none;
  border-color: #107969;
}

.c22:disabled {
  color: #ABBBD1;
}

.c21 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.c23 {
  position: absolute;
  left: 10px;
  top: 10px;
}

.c5 {
  border-radius: 50%;
  background-color: #E9F1FB;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 50px;
  height: 50px;
  background-color: rgba(233,241,251,1);
  opacity: 1;
  color: #2F3850;
}

.c12 {
  padding: 0 !important;
  margin-top: 10px;
  width: 100%;
}

.c9 {
  color: #B727EA;
}

.c3 {
  position: absolute;
  right: 16px;
  top: 16px;
}

<div>
  <div
    class="c0 c1"
    direction="column"
    display="flex"
    height="100% !important"
    overflow="clip"
    pt="54"
    style="box-sizing: border-box; position: relative; margin-left: auto; margin-right: auto; padding-left: 15px; padding-right: 15px; max-width: 960px;"
  >
    <div
      class="c2 c3"
      width="max-content"
    >
      <div
        style="display: flex; flex-wrap: wrap; flex-grow: 0; flex-shrink: 0; align-items: normal; justify-content: flex-start; margin: 0px;"
      >
        <div
          align="start"
          class="c4"
          style="box-sizing: border-box; min-height: 1px; position: relative; width: 100%; flex-basis: 0px; flex-grow: 1; flex-shrink: 0; max-width: 100%; margin-left: 0%; padding: 8px;"
        >
          <div
            style="margin-left: -15px; margin-right: -15px; display: flex; flex-wrap: wrap; flex-grow: 0; flex-shrink: 0; align-items: center; justify-content: flex-start;"
          >
            <div
              align="start"
              class="c4"
              style="box-sizing: border-box; min-height: 1px; position: relative; padding-left: 15px; padding-right: 15px; width: 25%; flex-basis: 25%; flex-grow: 0; flex-shrink: 0; max-width: 25%; margin-left: 0%;"
            >
              <div
                class="c5"
                opacity="1"
              >
                <img
                  class="c6"
                  role="presentation"
                  src="IMAGE_MOCK"
                />
              </div>
            </div>
            <div
              align="start"
              class="c4"
              style="box-sizing: border-box; min-height: 1px; position: relative; padding-left: 15px; padding-right: 15px; width: 75%; flex-basis: 75%; flex-grow: 0; flex-shrink: 0; max-width: 75%; margin-left: 0%;"
            >
              <p
                class="c7"
                font-weight="bold"
              >
                Something went wrong? Have a new idea?
              </p>
              <p
                class="c8"
                color="#B727EA"
                font-weight="bold"
              >
                <a
                  class="c9"
                  href="https://msu.co1.qualtrics.com/jfe/form/SV_6S9MV7pPpoqFwTY"
                  target="_blank"
                >
                  Share your thoughts here!
                </a>
              </p>
            </div>
          </div>
        </div>
        <div
          align="end"
          class="c10"
          style="box-sizing: border-box; min-height: 1px; position: relative; width: auto; flex-basis: auto; flex-grow: 0; flex-shrink: 0; max-width: 100%; margin-left: 0%; padding: 0px;"
        >
          <button
            aria-label="Close"
            class="c11"
            title="Close"
          >
            <img
              alt="cross"
              src="IMAGE_MOCK"
            />
          </button>
        </div>
      </div>
    </div>
    <div
      class="c12"
      style="box-sizing: border-box; position: relative; margin-left: auto; margin-right: auto; padding-left: 15px; padding-right: 15px; display: flex;"
    >
      <div
        class="c13"
      >
        <h1
          class="c14"
        >
          My Dashboard
        </h1>
        <div
          class="c15"
          display="flex"
        >
          <div
            class="c16"
            data-for="dashboard-cdh"
            data-tip=""
          >
            <img
              alt="?"
              class="c6"
              src="IMAGE_MOCK"
            />
          </div>
        </div>
      </div>
      <div
        class="c17"
        height="100%"
        width="2"
      />
      <button
        class="c18"
        display="flex"
        font-weight="bold"
      >
        <img
          alt="Import Intervention"
          class="c19"
          src="IMAGE_MOCK"
        />
        <p
          class="c8"
          color="#B727EA"
          font-weight="bold"
        >
          Import Intervention
        </p>
      </button>
      <span
        style="display: table; clear: both;"
      />
    </div>
    <div
      class="c12"
      style="box-sizing: border-box; position: relative; margin-left: auto; margin-right: auto; padding-left: 15px; padding-right: 15px;"
    >
      <div
        style="margin-left: -15px; margin-right: -15px; display: flex; flex-wrap: wrap; flex-grow: 0; flex-shrink: 0; align-items: normal; justify-content: flex-start;"
      >
        <div
          style="box-sizing: border-box; min-height: 1px; position: relative; padding-left: 15px; padding-right: 15px; width: 50%; flex-basis: 50%; flex-grow: 0; flex-shrink: 0; max-width: 50%; margin-left: 0%; margin-top: 10px; margin-bottom: 10px;"
        >
          <div
            my="35"
            style="margin-left: -15px; margin-right: -15px; display: flex; flex-wrap: wrap; flex-grow: 0; flex-shrink: 0; align-items: center; justify-content: flex-start;"
          >
            <div
              style="box-sizing: border-box; min-height: 1px; position: relative; padding-left: 15px; padding-right: 15px; width: 100%; flex-basis: 0px; flex-grow: 1; flex-shrink: 0; max-width: 100%; margin-left: 0%;"
            >
              <div
                class="c16"
              >
                <div
                  class=" css-2b097c-container"
                >
                  <span
                    aria-atomic="false"
                    aria-live="polite"
                    aria-relevant="additions text"
                    class="css-1f43avz-a11yText-A11yText"
                  />
                  <div
                    class=" css-4iyz22-control"
                  >
                    <div
                      class=" css-g1d714-ValueContainer"
                    >
                      <div
                        class=" css-q5ew0g-placeholder"
                      >
                        All interventions
                      </div>
                      <div
                        class="css-b8ldur-Input"
                      >
                        <div
                          class=""
                          style="display: inline-block;"
                        >
                          <input
                            aria-autocomplete="list"
                            autocapitalize="none"
                            autocomplete="off"
                            autocorrect="off"
                            id="react-select-6-input"
                            spellcheck="false"
                            style="box-sizing: content-box; width: 2px; border: 0px; opacity: 1; outline: 0; padding: 0px;"
                            tabindex="0"
                            type="text"
                            value=""
                          />
                          <div
                            style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
                          />
                        </div>
                      </div>
                    </div>
                    <div
                      class=" css-1hb7zxy-IndicatorsContainer"
                    >
                      <div
                        aria-hidden="true"
                        class=" css-tlfecz-indicatorContainer"
                      >
                        <img
                          alt="arrow"
                          class="c20"
                          src="IMAGE_MOCK"
                          transform=""
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          style="box-sizing: border-box; min-height: 1px; position: relative; padding-left: 15px; padding-right: 15px; width: 50%; flex-basis: 50%; flex-grow: 0; flex-shrink: 0; max-width: 50%; margin-left: 0%; margin-top: 10px; margin-bottom: 10px;"
        >
          <div
            my="35"
            style="margin-left: -15px; margin-right: -15px; display: flex; flex-wrap: wrap; flex-grow: 0; flex-shrink: 0; align-items: center; justify-content: flex-start;"
          >
            <div
              style="box-sizing: border-box; min-height: 1px; position: relative; padding-left: 15px; padding-right: 15px; width: 100%; flex-basis: 0px; flex-grow: 1; flex-shrink: 0; max-width: 100%; margin-left: 0%;"
            >
              <div
                class="c16"
              >
                <div
                  class=" css-2b097c-container"
                >
                  <span
                    aria-atomic="false"
                    aria-live="polite"
                    aria-relevant="additions text"
                    class="css-1f43avz-a11yText-A11yText"
                  />
                  <div
                    class=" css-pqwieh-control"
                  >
                    <div
                      class=" css-g1d714-ValueContainer"
                    >
                      <div
                        class="css-1rhbuit-multiValue"
                      >
                        <div
                          class="css-12jo7m5"
                        >
                          Closed
                        </div>
                        <div
                          class="css-xb97g8"
                        >
                          <svg
                            aria-hidden="true"
                            class="css-tj5bde-Svg"
                            focusable="false"
                            height="14"
                            viewBox="0 0 20 20"
                            width="14"
                          >
                            <path
                              d="M14.348 14.849c-0.469 0.469-1.229 0.469-1.697 0l-2.651-3.030-2.651 3.029c-0.469 0.469-1.229 0.469-1.697 0-0.469-0.469-0.469-1.229 0-1.697l2.758-3.15-2.759-3.152c-0.469-0.469-0.469-1.228 0-1.697s1.228-0.469 1.697 0l2.652 3.031 2.651-3.031c0.469-0.469 1.228-0.469 1.697 0s0.469 1.229 0 1.697l-2.758 3.152 2.758 3.15c0.469 0.469 0.469 1.229 0 1.698z"
                            />
                          </svg>
                        </div>
                      </div>
                      <div
                        class="css-1rhbuit-multiValue"
                      >
                        <div
                          class="css-12jo7m5"
                        >
                          Draft
                        </div>
                        <div
                          class="css-xb97g8"
                        >
                          <svg
                            aria-hidden="true"
                            class="css-tj5bde-Svg"
                            focusable="false"
                            height="14"
                            viewBox="0 0 20 20"
                            width="14"
                          >
                            <path
                              d="M14.348 14.849c-0.469 0.469-1.229 0.469-1.697 0l-2.651-3.030-2.651 3.029c-0.469 0.469-1.229 0.469-1.697 0-0.469-0.469-0.469-1.229 0-1.697l2.758-3.15-2.759-3.152c-0.469-0.469-0.469-1.228 0-1.697s1.228-0.469 1.697 0l2.652 3.031 2.651-3.031c0.469-0.469 1.228-0.469 1.697 0s0.469 1.229 0 1.697l-2.758 3.152 2.758 3.15c0.469 0.469 0.469 1.229 0 1.698z"
                            />
                          </svg>
                        </div>
                      </div>
                      <div
                        class="css-1rhbuit-multiValue"
                      >
                        <div
                          class="css-12jo7m5"
                        >
                          Published
                        </div>
                        <div
                          class="css-xb97g8"
                        >
                          <svg
                            aria-hidden="true"
                            class="css-tj5bde-Svg"
                            focusable="false"
                            height="14"
                            viewBox="0 0 20 20"
                            width="14"
                          >
                            <path
                              d="M14.348 14.849c-0.469 0.469-1.229 0.469-1.697 0l-2.651-3.030-2.651 3.029c-0.469 0.469-1.229 0.469-1.697 0-0.469-0.469-0.469-1.229 0-1.697l2.758-3.15-2.759-3.152c-0.469-0.469-0.469-1.228 0-1.697s1.228-0.469 1.697 0l2.652 3.031 2.651-3.031c0.469-0.469 1.228-0.469 1.697 0s0.469 1.229 0 1.697l-2.758 3.152 2.758 3.15c0.469 0.469 0.469 1.229 0 1.698z"
                            />
                          </svg>
                        </div>
                      </div>
                      <div
                        class="css-b8ldur-Input"
                      >
                        <div
                          class=""
                          style="display: inline-block;"
                        >
                          <input
                            aria-autocomplete="list"
                            autocapitalize="none"
                            autocomplete="off"
                            autocorrect="off"
                            id="react-select-7-input"
                            spellcheck="false"
                            style="box-sizing: content-box; width: 2px; border: 0px; opacity: 1; outline: 0; padding: 0px;"
                            tabindex="0"
                            type="text"
                            value=""
                          />
                          <div
                            style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
                          />
                        </div>
                      </div>
                    </div>
                    <div
                      class=" css-1hb7zxy-IndicatorsContainer"
                    >
                      <div
                        aria-hidden="true"
                        class=" css-tlfecz-indicatorContainer"
                      >
                        <svg
                          aria-hidden="true"
                          class="css-tj5bde-Svg"
                          focusable="false"
                          height="20"
                          viewBox="0 0 20 20"
                          width="20"
                        >
                          <path
                            d="M14.348 14.849c-0.469 0.469-1.229 0.469-1.697 0l-2.651-3.030-2.651 3.029c-0.469 0.469-1.229 0.469-1.697 0-0.469-0.469-0.469-1.229 0-1.697l2.758-3.15-2.759-3.152c-0.469-0.469-0.469-1.228 0-1.697s1.228-0.469 1.697 0l2.652 3.031 2.651-3.031c0.469-0.469 1.228-0.469 1.697 0s0.469 1.229 0 1.697l-2.758 3.152 2.758 3.15c0.469 0.469 0.469 1.229 0 1.698z"
                          />
                        </svg>
                      </div>
                      <div
                        aria-hidden="true"
                        class=" css-tlfecz-indicatorContainer"
                      >
                        <img
                          alt="arrow"
                          class="c20"
                          src="IMAGE_MOCK"
                          transform=""
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          style="box-sizing: border-box; min-height: 1px; position: relative; padding-left: 15px; padding-right: 15px; width: 50%; flex-basis: 50%; flex-grow: 0; flex-shrink: 0; max-width: 50%; margin-left: 0%; margin-top: 10px; margin-bottom: 10px;"
        >
          <div
            style="margin-left: -15px; margin-right: -15px; display: flex; flex-wrap: wrap; flex-grow: 0; flex-shrink: 0; align-items: center; justify-content: flex-start;"
          >
            <div
              style="box-sizing: border-box; min-height: 1px; position: relative; padding-left: 15px; padding-right: 15px; width: 100%; flex-basis: 0px; flex-grow: 1; flex-shrink: 0; max-width: 100%; margin-left: 0%;"
            >
              <div
                class="c21"
              >
                <input
                  aria-label="Filter Interventions by name"
                  class="c22"
                  placeholder="Filter by name"
                  type="text"
                />
                <img
                  alt="search"
                  class="c23"
                  src="IMAGE_MOCK"
                />
                
              </div>
            </div>
          </div>
        </div>
      </div>
      <span
        style="display: table; clear: both;"
      />
    </div>
    <div
      class="c24"
    >
      <div
        class="virtual-grid-auto-sizer"
        style="overflow: visible; height: 0px; width: 0px;"
      />
      <div
        class="resize-triggers"
      >
        <div
          class="expand-trigger"
        >
          <div
            style="width: 1px; height: 1px;"
          />
        </div>
        <div
          class="contract-trigger"
        />
      </div>
    </div>
    <span
      style="display: table; clear: both;"
    />
  </div>
</div>
`;
